adding all files

--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    </headtittle>resume project</head>title>
+    <tittle>resume project</title>
  </head>
  <body>
  	<h1>this is my first project</h1>
